# TreeGen

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CHATGPT.md  CLAUDE.md  README.md  ROADMAP.md  alembic.ini  biome.json  colors_and_type.css  conftest.py  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.agent-tasks/: README.md  (+9 more)
services/archive-service/: README.md  pyproject.toml
services/archive-service/src/archive_service/: __init__.py  auth.py  config.py  database.py  main.py  redis_client.py  token_storage.py
services/archive-service/src/archive_service/adapters/: __init__.py  familysearch.py
services/archive-service/src/archive_service/api/: __init__.py  familysearch.py
services/archive-service/src/archive_service/planner/: __init__.py  archives_catalog.json  catalog.py  dto.py  repo.py  router.py  schemas.py  scorer.py
services/archive-service/src/archive_service/registry/: __init__.py  repo.py  router.py  schemas.py  scorer.py
services/archive-service/tests/: conftest.py  test_endpoints.py  test_familysearch_adapter.py  test_security_headers.py
services/archive-service/tests/planner/: conftest.py  test_catalog.py  test_scorer.py  test_suggest_basic.py
services/archive-service/tests/registry/: conftest.py  test_endpoints.py  test_scorer.py
services/dna-service/: Dockerfile  README.md  pyproject.toml
services/dna-service/src/dna_service/: auth.py  billing.py  config.py  database.py  main.py  schemas.py
services/dna-service/src/dna_service/api/: consents.py  dna_matches.py  kits.py  match_list_import.py  matches.py  triangulation.py  uploads.py
services/dna-service/src/dna_service/services/: cache.py  matcher.py  permissions.py  storage.py
services/dna-service/tests/: conftest.py  test_consents.py  test_consents_audit.py  test_consents_flow.py  test_healthz.py  test_kits_link_person.py  test_match_list_import.py  test_matches_api.py  test_observability_init.py  test_security_headers.py  test_storage.py  test_triangulation_endpoint.py
services/email-service/: Dockerfile  README.md  pyproject.toml
services/email-service/src/email_service/: __init__.py  config.py  database.py  main.py  schemas.py
services/email-service/src/email_service/api/: __init__.py  health.py  send.py
services/email-service/src/email_service/services/: __init__.py  dispatcher.py  redaction.py  resend_client.py  templates.py
services/email-service/templates/: _base.html  _base.txt
services/email-service/templates/export_ready/: en.html  en.subject.txt  en.txt  ru.html  ru.subject.txt  ru.txt
services/email-service/templates/ownership_transferred/: en.html  en.subject.txt  en.txt  ru.html  ru.subject.txt  ru.txt
services/email-service/templates/payment_failed/: en.subject.txt  en.txt  ru.html
services/email-service/templates/payment_succeeded/: en.html  en.subject.txt  en.txt
services/email-service/templates/welcome/: en.html  en.txt  ru.subject.txt
services/email-service/tests/: conftest.py  test_dispatcher_unit.py  test_health.py  test_observability_init.py  test_redaction.py  test_security_headers.py  test_send.py  test_templates.py
services/notification-service/: Dockerfile  README.md  pyproject.toml
services/notification-service/src/notification_service/: __init__.py  auth.py  config.py  database.py  main.py  schemas.py
services/notification-service/tests/: conftest.py  test_api.py  test_dispatcher.py  test_health.py  test_observability_init.py  test_preferences_api.py  test_security_headers.py  test_telegram_channel.py
services/parser-service/: Dockerfile  README.md  pyproject.toml
services/parser-service/src/parser_service/: __init__.py  auth.py  billing.py  config.py  database.py  main.py  queue.py  schemas.py  worker.py
services/parser-service/templates/court_ready/: _macros.html  ancestry.html  base.html  family.html  person.html
services/parser-service/tests/: conftest.py  test_ai_extraction_api.py  test_ai_extraction_vision.py  test_ai_normalization_service.py  test_ai_source_extraction_pdf.py  test_audio_consent_api.py  test_audio_sessions_api.py  test_auth_required.py  test_auto_transfer.py  test_billing_gates.py  test_bulk_compute_async.py  test_bulk_hypothesis_compute.py  test_chat_sessions.py  test_chat_turn.py  test_completeness_api.py  test_completeness_validation.py  test_dedup_api.py  test_dedup_finder.py  test_digest_summary.py  test_dm_buckets.py  test_dna_rule_registered.py  test_ego_anchor_api.py  test_export_audit_api.py  test_familysearch_api.py  test_familysearch_importer.py  test_familysearch_oauth.py  test_fantasy_endpoints.py  test_fs_dedup_attempts.py  test_fs_import_job.py  test_fs_pedigree_merger.py  test_healthz.py  test_hypotheses_api.py  test_hypothesis_runner.py  test_hypothesis_score_recompute.py  test_image_preprocessing.py  test_import_runner_progress.py  test_imports_api.py  test_imports_async.py  test_invitation_lookup.py  test_metrics.py  (+30 more)
services/parser-service/tests/court_ready/: conftest.py  test_render_basic.py  test_render_unit.py
services/report-service/: README.md  pyproject.toml
services/report-service/src/report_service/: __init__.py  config.py  database.py  main.py  queue.py  worker.py
services/report-service/templates/relationship/: _macros.html  base.html  relationship.html
services/report-service/tests/: conftest.py  test_relationship_api.py  test_relationship_render_unit.py
services/report-service/tests/bundles/: conftest.py  test_alembic_0042.py  test_bundle_api.py  test_bundle_cleanup.py  test_bundle_runner.py
services/telegram-bot/: Dockerfile  README.md  pyproject.toml
services/telegram-bot/src/telegram_bot/: __init__.py  config.py  database.py  main.py  schemas.py  worker.py
services/telegram-bot/tests/: conftest.py  test_db_queries_integration.py  test_digest.py  test_handlers.py  test_health.py  test_inline_search.py  test_link_confirm.py  test_link_tokens.py  test_notify.py  test_observability_init.py  test_security_headers.py  test_webhook.py
(+681 files in other folders)
