# =============================================================================
# AutoTreeGen — корневой pyproject.toml.
# Используется как uv workspace: подпроекты подключаются через [tool.uv.sources].
# https://docs.astral.sh/uv/concepts/workspaces/
# =============================================================================

[project]
name = "autotreegen"
version = "0.0.1"
description = "AI-платформа для научной генеалогии (GEDCOM + DNA + архивы)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Vladimir", email = "autotreegen@gmail.com" },
]

# Корневой проект тянет workspace-пакеты как зависимости, чтобы они оказались
# в общем .venv и были доступны для скриптов в scripts/, alembic env.py и т.п.
dependencies = [
    "shared-models",
    "gedcom-parser",
]

# -----------------------------------------------------------------------------
# uv workspace
# Подпроекты добавлять в [tool.uv.workspace.members] по мере появления.
# -----------------------------------------------------------------------------
[tool.uv.workspace]
# Перечисляем явно, потому что часть подпапок ещё пустые (.gitkeep) и не
# содержат pyproject.toml. По мере появления реальных пакетов — добавляем сюда.
members = [
    "packages/gedcom-parser",
    "packages/shared-models",
    "packages/dna-analysis",
    "packages/entity-resolution",
    "packages/familysearch-client",
    "packages/inference-engine",
    "services/parser-service",
    "services/dna-service",
    "services/notification-service",
]

# Резолвим workspace-имена из локальных путей, а не из PyPI.
[tool.uv.sources]
shared-models = { workspace = true }
gedcom-parser = { workspace = true }
dna-analysis = { workspace = true }
entity-resolution = { workspace = true }
familysearch-client = { workspace = true }
inference-engine = { workspace = true }
parser-service = { workspace = true }
dna-service = { workspace = true }
notification-service = { workspace = true }

[tool.uv]
package = false

# -----------------------------------------------------------------------------
# Dependency groups (PEP 735) — современная замена устаревшего
# `[tool.uv.dev-dependencies]`. Группа `dev` ставится автоматически при
# `uv sync` и устанавливается через `uv sync --group dev` явно.
# -----------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pre-commit>=3.8",
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "hypothesis>=6.115",
    "ipython>=8.29",
    # Phase 2: миграции и тесты ORM
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",   # sync-драйвер для alembic offline-режима
    "python-dotenv>=1.0",     # авто-загрузка .env (Phase 2 alembic)
    "testcontainers[postgres]>=4.8",
    "pyyaml>=6.0",            # парсинг .github/workflows/*.yml в tests/test_ci_parity.py
]

# -----------------------------------------------------------------------------
# Ruff — линтер + форматтер (заменяет flake8/isort/pyupgrade).
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "samples/personal",
]

[tool.ruff.lint]
# Расширенный набор правил. Точечное отключение — в ignore.
select = [
    "E", "W",      # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "B",            # bugbear
    "A",            # builtins shadowing
    "C4",           # comprehensions
    "DTZ",          # datetimez
    "EM",           # error messages
    "FA",           # future-annotations
    "ISC",          # implicit-str-concat
    "ICN",          # import-conventions
    "PIE",          # misc
    "PT",           # pytest-style
    "RET",          # return
    "SIM",          # simplify
    "TID",          # tidy imports
    "TCH",          # type-checking
    "ARG",          # unused arguments
    "PTH",          # use pathlib
    "ERA",          # eradicate (commented-out code)
    "PL",           # pylint
    "RUF",          # ruff-specific
]
ignore = [
    "E501",         # длина строки — контролируется форматтером
    "PLR0913",      # too many arguments — разрешаем для парсеров
    "PLR2004",      # magic values — частые в парсерах GEDCOM
    "ISC001",       # конфликт с форматтером
    # Bilingual project (English code, Russian docstrings/comments).
    # ruff "ambiguous unicode" rules treat Cyrillic letters as suspicious;
    # not applicable when the comment is intentionally written in Russian.
    "RUF001",       # ambiguous chars in strings
    "RUF002",       # ambiguous chars in docstrings
    "RUF003",       # ambiguous chars in comments
    # Typer / FastAPI common pattern: callable defaults via Argument()/Option().
    "B008",
    # Commented-out code: используем как inline-док в parser-коде.
    "ERA001",
    # Parser complexity — GEDCOM date/place parsing inherently has many branches.
    "PLR0911", "PLR0912", "PLR0915",
    # Type-checking imports — strict TYPE_CHECKING-only is stylistic;
    # keep imports flat for readability.
    "TCH001", "TCH002", "TCH003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ARG", "TCH001", "TCH003"]
"scripts/**" = ["T20"]   # print() в скриптах — ок
# CLI typer-decorators: имитируют typed-DSL, mypy ругается на untyped decorator.
"**/cli.py" = ["TCH001", "TCH003"]
# Alembic-генерируемые миграции имеют file_template с датой + дефисом
# (см. alembic.ini::file_template) → имена не валидны как Python module names,
# но alembic их не импортирует обычным образом (exec через context). N999 false positive.
"infrastructure/alembic/versions/**" = ["N999"]
# Lazy imports намеренны:
# - тесты: heavy fixtures (testcontainers, alembic.command) грузим только когда
#   фикстура реально используется, чтобы collect-only не тянул зависимости;
# - scripts: те же alembic/CLI-импорты внутри функций для быстрого --help;
# - import_runner: gedcom-parser и shared_models.types — лениво, чтобы импорт
#   parser_service.services.* не имел side-effect от тяжёлых модулей.
"**/tests/**" = ["PLC0415"]
"**/scripts/**" = ["PLC0415"]
"**/services/import_runner.py" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------------------------------------------------------
# Black — форматтер (используем вместе с ruff format для совместимости).
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
    \.venv
  | build
  | dist
  | samples/personal
)/
'''

# -----------------------------------------------------------------------------
# Mypy — типы (strict для нового кода, постепенный onboarding).
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
exclude = [
    "samples/",
    "build/",
    "dist/",
    ".venv/",
]
# Disable strict-import / decorator checks for libraries без stubs (typer, convertdate)
# и для файлов, где typer-decorator делает функцию untyped.
disable_error_code = ["misc", "import-not-found", "import-untyped"]

[[tool.mypy.overrides]]
module = ["convertdate", "convertdate.*", "typer", "typer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# SQLAlchemy 2 имеет свои stubs (sqlalchemy[mypy] plugin), но они тяжёлые
# и periodically lag за версиями; pgvector, asyncpg, alembic — тоже без
# полных stubs в pre-commit isolated env. Глобально игнорируем missing imports
# для этих пакетов; реальная проверка типов запросов остаётся за runtime-тестами.
[[tool.mypy.overrides]]
module = [
    "sqlalchemy",
    "sqlalchemy.*",
    "asyncpg",
    "asyncpg.*",
    "pgvector",
    "pgvector.*",
    "alembic",
    "alembic.*",
]
ignore_missing_imports = true

# shared_models наследует от sqlalchemy.AsyncAttrs/DeclarativeBase, которые
# из-за ignore_missing_imports видны mypy как Any. Strict-mode с
# disallow_subclassing_any блокирует это. Также SQLAlchemy event decorators
# (event.listens_for, listen) untyped — глобально разрешаем для shared_models.
[[tool.mypy.overrides]]
module = ["shared_models.*"]
disallow_subclassing_any = false
disallow_untyped_decorators = false
# CLI пакета gedcom-parser использует typer-pattern с decorated commands;
# typer без официальных stubs делает decorator

# dna-analysis — workspace package, в pre-commit изолированной среде
# не видим mypy import-resolver'у. disable_error_code должен суппрессить
# import-not-found, но в strict-mode оно протекает. Явный override.
[[tool.mypy.overrides]]
module = ["dna_analysis", "dna_analysis.*"]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest — корневой конфиг для всего workspace.
# import-mode=importlib: каждый модуль импортируется по абсолютному пути,
# без манипуляции sys.path и __init__.py-эвристик rootdir. Это решает
# ImportPathMismatchError, который возникал когда несколько пакетов имели
# одноимённый tests/conftest.py (packages/gedcom-parser/tests/conftest.py
# и services/parser-service/tests/conftest.py оба регистрировались как
# `tests.conftest` под старым "prepend"-режимом).
# https://docs.pytest.org/en/stable/explanation/pythonpath.html#import-modes
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov --cov-report=xml --cov-report=term"
# auto-режим: async-функции теста и фикстуры распознаются без явного
# @pytest.mark.asyncio. Нужно для shared-models/tests/test_orm_smoke.py
# (написаны в auto-стиле). Существующие explicit-декораторы в
# parser-service/tests/* остаются совместимы — auto не запрещает их.
asyncio_mode = "auto"
# Session-scoped async fixtures (например shared-models engine_fixture)
# должны жить в том же event loop, что и тесты, которые их потребляют.
# Иначе asyncpg-Future, созданный в одном loop'е, попадает в другой и
# падает с "Future attached to a different loop".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "slow: медленные тесты",
    "integration: требуют docker-compose сервисов",
    "gedcom_real: используют реальные GED-файлы (skipped в CI)",
    "db: требуют живой БД",
    "familysearch_real: бьют по живому FamilySearch sandbox (skipped в CI)",
]
