[project]
name = "dna-service"
version = "0.1.0"
description = "AutoTreeGen DNA service — consent + encrypted DNA storage + matching API (Phase 6.2)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "AutoTreeGen", email = "autotreegen@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "python-dotenv>=1.0",
    "anyio>=4.0",
    "shared-models",
    "dna-analysis",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "psycopg[binary]>=3.2",
]

# Phase 13.1 — Sentry SDK. Init no-op без SENTRY_DSN, поэтому extra только
# для прод-образа.
observability = [
    "sentry-sdk[fastapi]>=2.20",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dna_service"]
