[project]
name = "email-service"
version = "0.1.0"
description = "AutoTreeGen transactional email service — Resend + idempotent dispatch (Phase 12.2)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "AutoTreeGen", email = "autotreegen@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # Sandboxed jinja2 environment для рендеринга шаблонов из user-controlled
    # params без RCE-рисков (см. ADR-0039 §«Templates»).
    "jinja2>=3.1",
    "shared-models[security]",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_service"]
