[project]
name = "parser-service"
version = "0.1.0"
description = "GEDCOM import + tree-read API (Phase 3)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "AutoTreeGen", email = "autotreegen@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "python-dotenv>=1.0",
    "prometheus-client>=0.20",
    "shared-models",
    "gedcom-parser",
    "entity-resolution",
    "familysearch-client",
    "inference-engine",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",                      # ASGITransport client для тестов FastAPI
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",    # интеграционные тесты против реального Postgres
    "psycopg[binary]>=3.2",             # sync-драйвер для alembic upgrade в conftest
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parser_service"]
