[project]
name = "parser-service"
version = "0.1.0"
description = "GEDCOM import + tree-read API (Phase 3)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "AutoTreeGen", email = "autotreegen@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "python-dotenv>=1.0",
    "prometheus-client>=0.20",
    "shared-models[security,observability]",
    "gedcom-parser",
    "entity-resolution",
    "familysearch-client",
    "inference-engine",
    # Phase 12.0 — entitlement-gating через billing-service. Импортируем
    # только assert_feature / get_user_plan; webhook-handlers и stripe SDK
    # в parser-service не нужны.
    "billing-service",
    # Phase 3.5 — async imports через arq + Redis pubsub для SSE.
    "arq>=0.26",
    "redis[hiredis]>=5.0",
    "sse-starlette>=2.0",
    # Phase 5.1 — Fernet at-rest encryption для FamilySearch OAuth-токенов
    # (см. ADR-0027). cryptography уже в lockfile через dna-analysis, фиксируем
    # explicit dep чтобы parser-service не зависел от транзитивности.
    "cryptography>=42",
    # Phase 4.10 — Clerk webhook signature verification (Svix HMAC).
    # PyJWT и httpx уже идут через shared-models.auth.
    "svix>=1.40",
    # Phase 10.2 (ADR-0059) — AI source extraction.
    # ai-layer: prompt registry + Anthropic/Voyage клиенты + use cases.
    # pypdf: text-extraction для PDF-источников до vision-fallback'а.
    # Pillow (Phase 10.2b): EXIF auto-rotate + resize >2048px перед vision-вызовом.
    "ai-layer",
    "pypdf>=5.0",
    "Pillow>=11.0",
    # Phase 15.6 — Court-Ready Report. Jinja2 рендерит HTML-шаблоны,
    # WeasyPrint конвертирует HTML→PDF. WeasyPrint требует системных
    # libpango/libgdk-pixbuf на Linux (есть на ubuntu-latest GHA-раннере).
    # На Windows-dev native-libs могут отсутствовать; PDF-генерация тогда
    # raise'нет в runtime — caller'ы (тесты + endpoint) graceful'ят.
    "Jinja2>=3.1",
    "weasyprint>=63",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",                      # ASGITransport client для тестов FastAPI
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",    # интеграционные тесты против реального Postgres
    "psycopg[binary]>=3.2",             # sync-драйвер для alembic upgrade в conftest
    "fakeredis>=2.20",                  # in-memory Redis для тестов pub/sub (Phase 3.5)
]

# Phase 13.0 — опциональный Cloud Tasks бэкенд для очереди в проде (см.
# ADR-0031). Локально не нужен; CI deploy-staging.yml ставит сервис с
# `--extra cloud-tasks`. Изоляция через optional-extra держит dev-машины
# тонкими (google-cloud-tasks + grpc = ~30 МБ wheels).
cloud-tasks = [
    "google-cloud-tasks>=2.16",
]

# Phase 4.11a — GDPR export storage backends (см. ADR-0046).
# Dev/local: `--extra storage-minio` (docker-compose уже поднимает MinIO).
# Prod: `--extra storage-gcs`. Тесты используют InMemoryStorage без extras.
storage-minio = [
    "shared-models[storage-minio]",
]
storage-gcs = [
    "shared-models[storage-gcs]",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parser_service"]
