[project]
name = "report-service"
version = "0.1.0"
description = "AutoTreeGen report-service — pro-grade per-relationship PDF reports (Phase 24.3)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "AutoTreeGen", email = "autotreegen@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "python-dotenv>=1.0",
    "shared-models[security,observability]",
    # Phase 24.3 — PDF stack. Mirrors parser-service Phase 15.6 dep set;
    # WeasyPrint требует системных libpango/libgdk-pixbuf на Linux (есть
    # на ubuntu-latest GHA-раннере; на Windows-dev может отсутствовать —
    # endpoint graceful'ит 503).
    "Jinja2>=3.1",
    "weasyprint>=63",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "psycopg[binary]>=3.2",
]

# Phase 4.11a (ADR-0046) — opt-in storage backends. Тесты используют
# InMemoryStorage без extras.
storage-minio = [
    "shared-models[storage-minio]",
]
storage-gcs = [
    "shared-models[storage-gcs]",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/report_service"]
