[project]
name = "report-service"
version = "0.1.0"
description = "AutoTreeGen report-service — pro-grade per-relationship PDF reports (Phase 24.3)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "AutoTreeGen", email = "autotreegen@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "python-dotenv>=1.0",
    "shared-models[security,observability]",
    # Phase 24.3 — PDF stack. Mirrors parser-service Phase 15.6 dep set;
    # WeasyPrint требует системных libpango/libgdk-pixbuf на Linux (есть
    # на ubuntu-latest GHA-раннере; на Windows-dev может отсутствовать —
    # endpoint graceful'ит 503).
    "Jinja2>=3.1",
    "weasyprint>=63",
    # Phase 24.4 — async bundle worker. Same arq + redis pair as
    # parser-service; report-service worker process слушает свою очередь
    # ``report-bundles`` на том же Redis (см. ADR-0078). Никаких новых
    # job runners — это второй deployment того же arq-фреймворка.
    "arq>=0.26",
    "redis[hiredis]>=5.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "psycopg[binary]>=3.2",
    # Phase 24.4 — fakeredis для in-process arq pool без живого Redis
    # (зеркало parser-service test deps).
    "fakeredis>=2.20",
]

# Phase 4.11a (ADR-0046) — opt-in storage backends. Тесты используют
# InMemoryStorage без extras.
storage-minio = [
    "shared-models[storage-minio]",
]
storage-gcs = [
    "shared-models[storage-gcs]",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/report_service"]
